style.css
@import url("https://fonts.googleapis.com/css?family=Open%20Sans:700|Be%20Vietnam%20Pro:400");

:root {
  --text: #292929;
  --text-25: #a1a1a1b4;
  --text-30: #7b7b7b;
  --text-50: #606060;
  --text-70: #393939;

  --background: #ffffff;
  --bg-dark-10: #eaeaea;
  --primary: #416db3;
  --primary2: #8dbcc7;
  --primary2-80: #317a8b;
  --bg-dark-80: #191d1e;
  --bg-dark-80: #375f70;

  --bg-shadow: #44444483;

  --secondary: #58bbd3;
  --secondary2: #a4ccd9;

  --tertiary2: #c4e1e6;
  --accent2: #ebffd8;
  --accent: #a85de2;

  --space-base: 4px;
  --space-1x: 8px;
  --space-2x: 16px;
  --space-3x: 24px;
  --space-4x: 32px;
  --space-5x: 40px;
  --space-6x: 48px;
  --space-8x: 64px;
  --space-10x: 80px;
  --space-11x: 88px;
}

/* CSS reset */
*,
*::before,
*::after {
  box-sizing: border-box;
}
* {
  margin: 0;
}

input,
button,
textarea,
select {
  font: inherit;
}

/* Font sizing */
body {
  font-family: "Be Vietnam Pro";
  font-weight: 400;
  background-color: var(--background);
  color: var(--text);
}

h1,
h2,
h3,
h4,
h5 {
  font-family: "Open Sans";
  font-weight: 700;
}

html {
  font-size: 100%;
} /* 16px */

h1 {
  font-size: 3.053rem; /* 48.8px */
}

h2 {
  font-size: 2.442rem; /* 39.04px */
}

h3 {
  font-size: 1.954rem; /* 31.2px */
}

h4 {
  font-size: 1.563rem; /* 24.96px */
}

h5 {
  font-size: 1.2rem; /* 20px */
}

small {
  font-size: 0.8rem; /* 12.8px */
}

/* General */
.icon-md {
  font-size: 2rem;
}

.icon-sm {
  font-size: 1.2rem;
}

.shadow {
  box-shadow: 0 0 12px var(--bg-shadow);
}

/* About me */
header > .section-wrapper {
  position: relative;
  overflow-x: clip;
}

.container-rotated {
  transform: rotate(-10deg) translateY(-180px) scale(140%, 120%);
  position: absolute;
  height: 100%;
  width: 100%;
  background-color: var(--bg-dark-80);
}

.about-me-container {
  max-width: 1200px;
  margin: var(--space-5x) var(--space-3x);
  display: grid;
  grid-template-columns: 4fr 6fr;

  /* Create stacking context */
  position: relative;
  z-index: 1;
}

.bg-image-container {
  padding: var(--space-2x);
  min-height: 500px;

  display: flex;
  align-items: flex-end;
  justify-content: center;

  background-image: url(assets/sky-md.jpg);
  background-position: bottom;
  background-size: cover;

  color: white;
  z-index: 2;
}

.content-container {
  margin: var(--space-5x) 0;
  padding: var(--space-4x);

  background-color: white;
  display: flex;
  flex-direction: column;
  gap: var(--space-3x);
  justify-content: space-between;
  z-index: 1;
}

.text-container h2 {
  margin-bottom: var(--space-3x);
}

.text-container p {
  color: var(--text-30);
  margin-bottom: var(--space-2x);
}

.icons-container {
  align-self: flex-end;
  display: flex;
  gap: var(--space-3x);
}

.icons-container > a {
  color: inherit;
  text-decoration: none;
}

/* Cards section */
.section-wrapper {
  display: flex;
  justify-content: center;
}

.projects-section {
  max-width: 1200px;
  width: 100%;
  margin: var(--space-8x) var(--space-5x);
}

.projects-section > h2 {
  margin-bottom: var(--space-4x);
}

.projects-grid {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
  gap: var(--space-4x);
  row-gap: var(--space-6x);
}

.project-img {
  background-color: var(--bg-dark-10);
  min-height: 265px;

  display: flex;
  justify-content: center;
  align-items: center;
}
.project-img > img {
  height: 265px;
  width: 100%;
  object-fit: contain;
}

.project-content {
  padding: var(--space-2x);
  display: flex;
  flex-direction: column;
  gap: var(--space-1x);
}

.project-details {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.project-desc p {
  font-size: 0.8rem;
  color: var(--text-30);
  min-height: 4lh;
}

.project-icons {
  display: flex;
  gap: var(--space-1x);
}
.project-icons a {
  padding: 0 var(--space-base);
  color: inherit;
  text-decoration: none;
}

.project-icons > a > i {
  display: flex;
  align-items: center;
}

/* Contact Me */
footer > .section-wrapper {
  background-color: var(--bg-dark-80);
  color: white;
}
.contact-section {
  margin: var(--space-5x);
  max-width: 1200px;

  display: grid;
  grid-template-columns: 1fr 2fr;
  gap: var(--space-4x);
}

.contact-me > *:not(:last-child) {
  margin-bottom: var(--space-3x);
}

.contact-item {
  display: flex;
  align-items: center;
  gap: var(--space-1x);
}
.contact-item:not(:last-child) {
  margin-bottom: var(--space-2x);
}

.contact-img > img {
  width: 100%;
  min-height: 100%;
  object-fit: cover;
}
.text-container > .about-img {
  display: none;
}

/* Tablet */
@media screen and (max-width: 1000px) and (min-width: 601px) {
  .container-rotated {
    transform: rotate(-10deg) translateY(-380px) scale(140%, 120%);
  }
  .about-me-container {
    margin: var(--space-10x) var(--space-4x) var(--space-5x) var(--space-11x);
    max-width: 650px;
    display: flex;
    flex-direction: column;
    align-items: center;
    position: relative;
  }
  .content-container {
    margin-bottom: 0px;
  }
  .bg-image-container {
    background-image: none;
    position: absolute;
    min-height: 0px;
    transform: translateY(-50px);
    color: white;
  }

  .bg-image-container.shadow {
    box-shadow: none;
  }

  .text-container > .about-img {
    display: block;
    margin-top: calc(150px * -1);
    margin-left: calc(100px * -1);
    padding: var(--space-4x) var(--space-2x) var(--space-2x) var(--space-2x);
    height: 400px;
    width: 350px;
    float: left;
  }

  .projects-grid {
    grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
  }

  .contact-section {
    grid-template-columns: 1fr 1fr;
  }
}

/* Mobile */
@media screen and (max-width: 600px) {
  .container-rotated {
    transform: rotate(-10deg) translateY(-700px) scale(180%, 120%);
  }
  .about-me-container {
    grid-template-columns: 1fr;
    margin: var(--space-4x);
    row-gap: var(--space-3x);
  }
  .bg-image-container {
    min-height: 400px;
    margin: 0 var(--space-3x);
  }
  .content-container {
    margin: 0;
    padding: 0;
    gap: var(--space-1x);
  }
  .content-container.shadow {
    box-shadow: none;
  }

  .text-container > .about-img {
    display: none;
  }

  .text-container h2 {
    text-align: center;
    margin-bottom: var(--space-1x);
  }

  .text-container p {
    margin-bottom: var(--space-1x);
    font-size: 0.9rem;
  }

  .about-me-container .icons-container {
    align-self: center;
  }

  .projects-section {
    margin: var(--space-4x);
  }
  .projects-grid {
    grid-template-columns: 1fr;
  }
  .contact-section {
    grid-template-columns: 1fr;
    margin: 0px;
  }
  .contact-me {
    padding: var(--space-3x);
  }
}

@media screen and (max-width: 350px) {
  .bg-image-container h1 {
    font-size: 2.5rem;
  }
  .contact-img > img {
    max-width: 100%;
  }
}

